...
  val BOTTOM_SHEET_SCAFFOLD_MID_HEIGHT = 170.dp
  val MAP_BOTTOM_PADDING_ADJUSTMENT = 20.dp

  const val TEST_TAG_MAP = "runHikeScreenMap"
  const val TEST_TAG_BACK_BUTTON = "runHikeScreenBackButton"
  const val TEST_TAG_ZOOM_BUTTONS = "runHikeScreenZoomInButton"
  const val TEST_TAG_BOTTOM_SHEET = "runHikeScreenBottomSheet"
  const val TEST_TAG_HIKE_NAME = "runHikeScreenHikeName"
  const val TEST_TAG_ELEVATION_GRAPH = "runHikeScreenElevationGraph"
  const val TEST_TAG_STOP_HIKE_BUTTON = "runHikeScreenStopHikeButton"
  const val TEST_TAG_TOTAL_DISTANCE_TEXT = "runHikeScreenTotalDistanceText"
  const val TEST_TAG_PROGRESS_TEXT = "runHikeScreenProgressText"
  const val TEST_TAG_CENTER_MAP_BUTTON = "runHikeScreenCenterMapButton"
  const val TEST_TAG_CURRENT_ELEVATION_TEXT = "runHikeScreenCurrentElevationText"

  // The maximum distance to be considered on a hike
  const val MAX_DISTANCE_TO_CONSIDER_HIKE = 50.0 // meters
}

@Composable
...
