...
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.unit.dp
import ch.hikemate.app.R
import ch.hikemate.app.ui.navigation.NavigationActions

object BackButton {
  const val BACK_BUTTON_TEST_TAG = "backButton"
}

/**
 * A composable that displays a back button.
 *
 * @param navigationActions The navigation actions.
...
