...
import androidx.navigation.NavHostController
import ch.hikemate.app.R

/** Object containing route constants. */
object Route {
  const val SAVED_HIKES = "SavedHikes"
  const val MAP = "Map"
  const val AUTH = "Auth"
  const val PROFILE = "Profile"
  const val HIKE_DETAILS = "HikeDetails"
  const val TUTORIAL = "Guide"
}

/** Object containing screen constants. */
object Screen {
  const val AUTH = "Auth Screen"
  const val SIGN_IN_WITH_EMAIL = "Sign-in-with-email Screen"
  const val CREATE_ACCOUNT = "Create-account Screen"
  const val DELETE_ACCOUNT = "Delete-account Screen"
  const val SAVED_HIKES = "SavedHikes Screen"
  const val MAP = "Map Screen"
  const val PROFILE = "Profile Screen"
  const val EDIT_PROFILE = "Edit-profile Screen"
  const val HIKE_DETAILS = "HikeDetails Screen"
...
