...

object SignInWithEmailScreen {
  const val TEST_TAG_TITLE = "sign_in_with_email_title"
  const val TEST_TAG_EMAIL_INPUT = "sign_in_with_email_name_input"
  const val TEST_TAG_PASSWORD_INPUT = "sign_in_with_email_password_input"
  const val TEST_TAG_SIGN_IN_BUTTON = "sign_in_with_email_sign_in_button"
  const val TEST_TAG_GO_TO_SIGN_UP_BUTTON = "sign_in_with_email_go_to_sign_up_button"
}

/**
 * A composable that displays the sign in with email screen.
 *
 * @param navigationActions The navigation actions.
...
