...
import ch.hikemate.app.ui.navigation.Screen
import ch.hikemate.app.ui.navigation.TopLevelDestinations
import ch.hikemate.app.ui.theme.primaryColor

object SignInScreen {
  const val TEST_TAG_TITLE = "sign_in_title"
  const val TEST_TAG_SIGN_IN_WITH_EMAIL = "sign_in_with_email_button"
  const val TEST_TAG_SIGN_IN_WITH_GOOGLE = "sign_in_with_google_button"
}

/** A composable function to display the sign in screen */
@Composable
fun SignInScreen(
...
