...
import androidx.compose.ui.semantics.semantics
import androidx.compose.ui.unit.dp
import ch.hikemate.app.R
import ch.hikemate.app.ui.components.AppIcon
import kotlinx.coroutines.launch

const val TEST_TAG_SIDEBAR_BUTTON = "TEST_TAG_SIDEBAR_BUTTON"
const val TEST_TAG_DRAWER_CONTENT = "TEST_TAG_DRAWER_CONTENT"
const val TEST_TAG_DRAWER_CLOSE_BUTTON = "TEST_TAG_DRAWER_CLOSE_BUTTON"
const val TEST_TAG_DRAWER_ITEM_PREFIX = "TEST_TAG_DRAWER_ITEM_"

val IsSelectedKey = SemanticsPropertyKey<Boolean>("IsSelected")

...
